Fix bugs when fatching unexisting data (null pointer)

--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="column">
-              <customer-notes [customer]="entity"></customer-notes>
+              <customer-notes [customerId]="entityId"></customer-notes>
 
               <customer-events [customer]="entity"></customer-events>
             </div>
