--- a/src/app/pages/dashboard-page/movers-card/movers-card.component.scss
+++ b/src/app/pages/dashboard-page/movers-card/movers-card.component.scss
@@ -35,19 +35,26 @@ $color-orange: #F16C00;
   }
 
   &__container {
+    position: relative;
     height: 305px;
 
     md-spinner {
-      margin: auto;
-      padding-top: 110px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translateX(-50%) translateY(-50%);
     }
   }
 
   &__item {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
     padding: 14px 10px;
+
+    &:first-child {
+      border-top: none;
+    }
 
     &:hover {
       background: rgba(0, 0, 0, 0.06);
@@ -102,6 +109,7 @@ $color-orange: #F16C00;
   }
 
   &__actions {
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
     padding: 15px 20px;
     font-size: 12px;
     color: $color-orange;
