--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -46,11 +46,22 @@ $card-title-color: #5B9BE1;
       }
 
       &__item {
+        display: flex;
         margin-top: 15px !important;
         font-size: 12px;
 
-        span {
+        span:first-of-type {
+          margin-right: 5px;
           font-weight: 500;
+          white-space: nowrap;
+        }
+
+        md-input {
+          margin: 0;
+
+          .md-input-wrapper {
+            margin: 0;
+          }
         }
       }
 
@@ -62,6 +73,24 @@ $card-title-color: #5B9BE1;
         font-size: 18px;
         color: rgba(0,0,0,0.4);
         cursor: pointer;
+      }
+
+      &__actions {
+        margin-top: 20px;
+        display: flex;
+        font-size: 12px;
+
+        div {
+          cursor: pointer;
+
+          &:first-of-type {
+            margin: 0 10px 0 auto;
+          }
+
+          &:last-of-type {
+            color: $card-title-color;
+          }
+        }
       }
     }
 
@@ -108,6 +137,11 @@ $card-title-color: #5B9BE1;
       &__large {
         width: 100%;
       }
+    }
+
+    credit-card-input {
+      width: 50%;
+      max-width: 400px;
     }
   }
 
@@ -170,6 +204,150 @@ $card-title-color: #5B9BE1;
       }
     }
   }
+
+  &__cc-input {
+    margin-bottom: 100px;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12);
+    background: white;
+
+    &__title {
+      padding: 15px;
+      border-bottom: 1px solid rgba(0,0,0,0.14);
+
+      &--main {
+        margin-bottom: 5px;
+        color: $card-title-color;
+      }
+
+      &--sub {
+        font-size: 12px;
+        color: rgba(0,0,0,0.6);
+      }
+    }
+
+    &__info {
+      display: flex;
+      flex-direction: column;
+      padding: 20px;
+      font-size: 14px;
+
+      &__expiration {
+        display: flex;
+        margin-top: 12px;
+
+        &__item {
+
+          &:first-of-type {
+            margin-right: 20px;
+          }
+
+          &__title {
+            margin-bottom: 6px;
+            font-size: 10px;
+            color: rgba(0,0,0,0.5);
+          }
+
+          dropdown-component {
+
+            .dropdown-component {
+              margin-top: 5px;
+
+              span {
+                font-size: 14px;
+              }
+
+              &__text {
+                &--selected {
+                  color: black !important;
+                }
+
+                &--unselected {
+                  color: rgba(0, 0, 0, 0.36) !important;
+                }
+              }
+
+              &__options {
+                &__item {
+                  padding: 6px 10px;
+                  font-size: 14px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &__address {
+      display: flex;
+      flex-direction: column;
+      padding: 0 20px 20px 20px;
+      font-size: 14px;
+
+      &__title {
+        margin-top: 15px;
+        font-size: 18px;
+        color: $card-title-color;
+      }
+
+      &__group {
+        display: flex;
+
+        dropdown-component {
+          margin-left: 25px;
+
+          .dropdown-component {
+            margin-top: 18px;
+
+            span {
+              font-size: 14px;
+            }
+
+            &__options {
+              &__item {
+                padding: 6px 10px;
+                font-size: 14px;
+              }
+            }
+
+            &__text {
+              &--selected {
+                color: black !important;
+              }
+
+              &--unselected {
+                color: rgba(0, 0, 0, 0.36) !important;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &__actions {
+      display: flex;
+      padding: 15px 20px;
+      border-top: 1px solid rgba(0,0,0,0.14);
+      font-size: 14px;
+
+      div {
+        cursor: pointer;
+
+        &:first-child {
+          margin: 0 10px 0 auto;
+        }
+
+        &:last-child {
+          color: $card-title-color;
+        }
+      }
+    }
+
+    md-input {
+      margin: 0;
+      max-width: 240px;
+    }
+  }
 }
 
 .credit-cards {
@@ -192,6 +370,7 @@ $card-title-color: #5B9BE1;
       width: 20px;
       font-size: 20px;
       color: $card-title-color;
+      cursor: pointer;
     }
 
     img {
