Work on customers page

--- a/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="events__content">
         <div><img src="assets/images/alert-icon.svg"></div>
-        <span>{{activity.action}} {{activity.actedUponType}} {{activity.actedUpon}}</span>
+        <span>{{activity.parse()}}</span>
       </div>
     </div>
   </md-card-content>
