--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -37,8 +37,9 @@ $blue-color: #4A90E2;
   }
 
   &__info {
+    display: flex;
+    align-items: center;
     height: 160px;
-    line-height: 160px;
     border-top: 1px solid rgba(0, 0, 0, 0.15);
     background-color: #fff;
 
@@ -56,7 +57,6 @@ $blue-color: #4A90E2;
     &__data {
       display: inline-block;
       vertical-align: middle;
-      line-height: 1;
 
       &__date {
         font-size: 12px;
@@ -73,10 +73,24 @@ $blue-color: #4A90E2;
       }
 
       &__other {
+        display: flex;
         font-size: 12px;
 
-        span {
+        .md-input-wrapper {
+          margin: 0;
+        }
+
+        &__item {
           margin-right: 20px;
+
+          .phone-number {
+            display: inline-block;
+            width: 90px;
+          }
+
+          md-input {
+            margin: 0;
+          }
 
           md-icon {
             margin-right: 5px;
@@ -86,6 +100,26 @@ $blue-color: #4A90E2;
             vertical-align: middle;
           }
         }
+      }
+    }
+
+    &__edit {
+      display: flex;
+      align-self: flex-start;
+      margin: 35px 60px 0 auto;
+
+      md-icon {
+        cursor: pointer;
+      }
+
+      div {
+        cursor: pointer;
+        font-size: 14px;
+      }
+
+      &__update {
+        margin-left: 10px;
+        color: #5B9BE1;
       }
     }
   }
