Enable user edit and fix rebills-transactions tables on customer view

--- a/src/app/pages/customers-page/customer-view/customer-transactions/customer-transactions.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-transactions/customer-transactions.component.html
@@ -1,6 +1,6 @@
 <div class="customer-view__table">
   <div class="customer-view__table__header">
-    <div class="customer-view__table__header__title">{{ getTitle() }}</div>
+    <div class="customer-view__table__header__title">HISTORICAL TRANSACTIONS</div>
     <md-input class="customer-view__table__header__filter" placeholder="Filter" [(ngModel)]="filterValue"></md-input>
     <table-pagination
       [limit]="limit"
