--- a/src/app/pages/fulfillment-providers/fulfillment-provider/fulfillment-provider.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-provider/fulfillment-provider.component.html
@@ -1,5 +1,5 @@
 <div #entityContainer class="entity" [class.entity--full-screen]="fullScreen">
-  <div *ngIf="!loading" class="entity__body" [style.height]="height">
+  <div *ngIf="!loadingData" class="entity__body" [style.height]="height">
     <entity-view-topnav [mode]="mode" [service]="service" (close)="closeDetails()" (del)="emitDeleteEntity()"></entity-view-topnav>
 
     <div *ngIf="entity">
