--- a/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
@@ -1,26 +1,56 @@
-<div class="customer-view__table customer-view__table--homepage">
-  <div class="customer-view__table__header customer-view__table__header--homepage">
+<div class="customer-view__table" [class.customer-view__table--homepage]="homepageMode">
+  <div class="customer-view__table__header" [class.customer-view__table__header--homepage]="homepageMode">
     <div class="customer-view__table__header__title">
-      <md-icon>trending_up</md-icon>
+      <md-icon *ngIf="homepageMode">trending_up</md-icon>
       <span>UPCOMING TRANSACTIONS</span>
     </div>
-    <md-icon class="customer-view__table__header__action alone">more_vert</md-icon>
+
+    <md-input *ngIf="!homepageMode" class="customer-view__table__header__filter" placeholder="Filter" [(ngModel)]="filterValue"></md-input>
+    <table-pagination
+      *ngIf="!homepageMode"
+      [limit]="limit"
+      [paginationValues]="paginationValues"
+      [previousDisabled]="page <= 0"
+      [nextDisabled]="!hasMorePages()"
+      (previous)="previous()"
+      (next)="next()"
+      (updateLimit)="updateLimit($event)">
+    </table-pagination>
+
+    <md-icon class="customer-view__table__header__action" [class.alone]="homepageMode">more_vert</md-icon>
   </div>
-  <table class="highlight table__homepage">
+  <table class="highlight" [class.table__homepage]="homepageMode" [class.table__custom]="!homepageMode">
     <thead>
     <tr>
       <th *ngFor="let params of columnParams" (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'">
         {{params.label}}
         <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
       </th>
+      <th *ngIf="!homepageMode"></th>
     </tr>
     </thead>
 
     <tbody>
     <tr *ngFor="let entity of entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
       <td *ngFor="let params of columnParams" [routerLink]="['/rebills', entity.id]" [class.cell--align-right]="params.align === 'right'">{{params.mappingFunction(entity)}}</td>
+      <td *ngIf="!homepageMode">
+        <table-actions
+          [service]="service">
+        </table-actions>
+      </td>
     </tr>
     </tbody>
   </table>
+
+  <table-pagination
+    *ngIf="!homepageMode"
+    [limit]="limit"
+    [paginationValues]="paginationValues"
+    [previousDisabled]="page <= 0"
+    [nextDisabled]="!hasMorePages()"
+    (previous)="previous()"
+    (next)="next()"
+    (updateLimit)="updateLimit($event)">
+  </table-pagination>
 </div>
 
