--- a/src/app/pages/emails-page/email/email.component.html
+++ b/src/app/pages/emails-page/email/email.component.html
@@ -1,5 +1,5 @@
 <div #entityContainer class="entity" [class.entity--full-screen]="fullScreen" (del)="emitDeleteEntity()">
-  <div *ngIf="!loading" class="entity__body" [style.height]="height">
+  <div *ngIf="!loadingData" class="entity__body" [style.height]="height">
 
     <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
 
