Add fulfillment tab to customer view

--- a/src/app/shared/components/coming-soon/coming-soon.component.html
+++ b/src/app/shared/components/coming-soon/coming-soon.component.html
@@ -1,5 +1,5 @@
 <div class="coming-soon">
-  <div (click)="navigation.back()" class="coming-soon__back-button"><md-icon>reply</md-icon></div>
+  <div *ngIf="!inPage" (click)="navigation.back()" class="coming-soon__back-button"><md-icon>reply</md-icon></div>
 
   <div class="coming-soon__container">
     <img class="coming-soon__image" src="/assets/images/logo-blue.svg">
