--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -41,7 +41,8 @@
     <div class="entity-view__navigation">
       <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===0" (click)="setIndex(0)">GENERAL DETAILS</span>
       <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===1" (click)="setIndex(1)">TRANSACTIONS</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===3" (click)="setIndex(2)">SESSIONS</span>
+      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===2" (click)="setIndex(2)">SESSIONS</span>
+      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex===3" (click)="setIndex(3)">FULFILLMENT</span>
     </div>
 
     <md-tab-group [(selectedIndex)]="selectedIndex">
@@ -191,6 +192,12 @@
       <md-tab>
         <div class="tab-container">
           <customer-sessions [id]="entityId"></customer-sessions>
+        </div>
+      </md-tab>
+
+      <md-tab>
+        <div class="tab-container">
+          <customer-fulfillment></customer-fulfillment>
         </div>
       </md-tab>
     </md-tab-group>
