--- a/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
@@ -34,9 +34,10 @@
     <tr *ngFor="let entity of entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
       <td *ngFor="let params of columnParams" [routerLink]="['/rebills', entity.id]" [class.cell--align-right]="params.align === 'right'">{{params.mappingFunction(entity)}}</td>
       <td *ngIf="!homepageMode">
-        <table-actions
-          [service]="service">
-        </table-actions>
+        <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
+        <md-menu #actionsMenu="mdMenu" x-position="before">
+          <button md-menu-item (click)="deleteEntity(entity.id)">Cancel Transaction</button>
+        </md-menu>
       </td>
     </tr>
     </tbody>
